# libcga

./: .clang-format  .gitignore  .lvimrc  Makefile.am  bootstrap  configure.ac
docs/: Doxyfile.in
libcga/include/: cga.h.in  vector.h
libcga/src/: vector.c
pkgconfig/: cga.pc.in
